bird_detection/build/log/idf_py_stderr_output_47836
/Users/usuario/esp/projects_tf/person_detection/main/detection_responder.cc: In function 'void setup_gpio()':
/Users/usuario/esp/projects_tf/person_detection/main/detection_responder.cc:133:3: error: 'gpio_pad_select_gpio' was not declared in this scope; did you mean 'esp_rom_gpio_pad_select_gpio'?
  133 |   gpio_pad_select_gpio(LED_GPIO_PIN);
      |   ^~~~~~~~~~~~~~~~~~~~
      |   esp_rom_gpio_pad_select_gpio
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/flash.dir/rule] Error 2
make: *** [flash] Error 2
